# scaf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/src/: middleware.ts
docs/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
docs/src/app/(hero)/: page.tsx
docs/src/app/(hero)/[username]/[templateId]/: page.tsx
docs/src/app/(hero)/templates/: page.tsx
docs/src/app/api/v1/template/: route.ts
docs/src/app/api/v1/template/[username]/[id]/: route.ts
docs/src/app/api/v1/user/: route.ts
docs/src/client/: api.ts
docs/src/components/: create-template.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx  user-profile.tsx
docs/src/components/landing/: hero-section.tsx
docs/src/components/ui/: copy-button.tsx  cover.tsx  rainbow-button.tsx  search-input.tsx
docs/src/hooks/: auth-provider.tsx
docs/src/lib/: auth.ts  cookies.ts  edge-auth.ts  firebase-admin-config.ts  firebase-admin.ts  firebase.ts  mongodb.ts
docs/src/models/: common.ts  template.ts
docs/src/services/: template.ts
docs/src/types/: schema.ts  template.ts
docs/src/utils/: helper.ts
samples/: my-web-app.json  react-app-template-back.json  react-app-template.json
src/: cli.rs  lib.rs  main.rs
src/model/: args.rs  language.rs  mod.rs  step.rs  template.rs
src/utils/: mod.rs  print.rs
tests/: args.rs  step.rs  template.rs
