[package]
name = "scaf"
version = "0.0.1"
edition = "2021"
authors = ["Vasanth <itsparser@gmail.com>"]
description = "A CLI tool to scaffold projects from templates"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dialoguer = "0.11.0"
regex = "1.10.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
indicatif = { version = "0.17.7", features = ["improved_unicode"] }